SERVER-54984 Relax invariant in ReshardingOpObserver about temporary reharding collection being sharded